--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,9 @@ body {
 h1 {
   color: white;
   text-shadow: 2px 2px black;
-  font-size: 40px;
+  font-size: 50px;
+  font-family: 'Rajdhani', sans-serif;
+  margin: 10px, 0 , 10px 0;
 }
 
 
@@ -42,11 +44,12 @@ label {
   font-size: 1.4rem;
   color: white;
   text-shadow: 1px 1px black;
+  font-family: 'Rajdhani', sans-serif;
 }
 
-input,
-select,
-textarea {
+
+
+input {
   width: 100%;
   margin: 5px 0 0;
   width: 100%;
@@ -59,6 +62,10 @@ textarea {
   border: 1px solid rgba(0, 0, 0, 0.829);
 }
 
+input:hover {
+  border: 2px solid lightblue;
+}
+
 
 .error { 
   color: red;
@@ -68,12 +75,12 @@ textarea {
 }
 
 .terms {
-  margin: 20px 0 0 30px;
+  margin: 20px 0 0 50px;
   text-shadow: 1px 1px black;
 }
 
 .box {
-  margin: 20px 0 -45px 125px;
+  margin: 20px 0 -42px 125px;
 }
 
 button:disabled {
@@ -81,7 +88,7 @@ button:disabled {
   background-color: rgba(255, 255, 255, 0.555);
   border: 1px solid rgba(0, 0, 0, 0.39);
   color: rgba(0, 0, 0, 0.315);
-  cursor: not-allowed;
+  cursor: default;
 }
 
 button {
@@ -98,6 +105,7 @@ button {
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   margin: 20px 0 20px 60px;
+  font-family: 'Rajdhani', sans-serif;
 }
 
 button:hover {
